Update template files for faebryk 3.0.x (#1)

--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,17 @@ __pycache__/
 *.so
 
 # KiCad
-source/kicad/*/*-backups
-source/kicad/*/_autosave-*
-source/kicad/*/*cache
+source/*-backups
+source/_autosave-*
+source/*cache
+*.kicad_pcb.lck
+
+# direnv
+.envrc
 
 # Distribution / packaging
 .Python
 env/
-build/
 develop-eggs/
 dist/
 downloads/
