--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,41 +3,46 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.urls]
-"Bug Tracker" = "" #TODO fill in
+"Bug Tracker" = "https://github.com/<owner>/<project>/issues"
 
 
 [tool.poetry]
-name = "project_name" #TODO fill in, and rename src/project_name accordingly
-# Then replace all imports accordingly with following command:
-# ```find src -type f -name "*.py" -exec sed -i 's/project_name/<project_name>/g' {} +```
-version = "0.0.1"
-authors = [] #TODO fill in
+name = "<project_name>"
+version = "<version>"
+authors = [<authors>]
 readme = ["README.md", "LICENSE"]
-license = "MIT"
-description = "" # TODO fill in
+license = "<licence>"
+description = "<short_project_description>"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-repository = "https://github.com" #TODO fill in
-homepage = "https://github.com" #TODO fill in
+repository = "https://github.com/<owner>/<project>"
+homepage = "https://github.com/<owner>/<project>"
 
 [tool.poetry.dependencies]
-python = "^3.11,<3.13"                                                        # max allowed version by scipy
-faebryk = { git = "https://github.com/faebryk/faebryk.git", branch = "main" }
+python = "^3.12,<3.13"                                                        # max allowed version by scipy
+faebryk = { git = "https://github.com/faebryk/faebryk.git", branch = "<faebryk_branch>" }
 typer = { version = "^0.9.0", extras = ["all"] }
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
 pytest = "^7.1.3"
 isort = "^5.6.4"
-ruff = "^0.0.275"
+ruff = "^0.4.4"
 
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
 
 [tool.ruff]
+line-length = 88         # Same as Black.
+target-version = "py312"
+
+[tool.ruff.format]
+exclude = ["_F.py"]
+
+[tool.ruff.lint]
 # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
 select = [
     # Pycodestyle
@@ -128,13 +133,8 @@ exclude = [
 ]
 per-file-ignores = {}
 
-# Same as Black.
-line-length = 88
-
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-
-target-version = "py311"
 
 [tool.ruff.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
