--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,11 @@ homepage = "https://github.com/TEMPLATE_VAR_github"
 [tool.poetry.dependencies]
 python = "^3.12,<3.13"                                                        # max allowed version by scipy
 faebryk = { git = "https://github.com/faebryk/faebryk.git", branch = "main" }
-typer = { version = "^0.9.0", extras = ["all"] }
+typer = { version = ">=0.9,<0.13", extras = ["all"] }
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^2.20.0"
-pytest = "^7.1.3"
-isort = "^5.6.4"
-ruff = "^0.4.4"
+pre-commit = ">=2.20,<4.0"
+pytest = ">=7.1.3,<9.0.0"
 
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
