--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,16 @@ repository = "https://github.com/ruben-iteng/RPDAP"
 homepage = "https://github.com/ruben-iteng/RPDAP"
 
 [tool.poetry.dependencies]
-python = "^3.12,<3.13"                                                        # max allowed version by scipy
-faebryk = {path = "../../faebryk", develop = true} #{ git = "https://github.com/atopile/faebryk.git", branch = "main" }
+python = "^3.12,<3.13" # max allowed version by scipy
+#faebryk = { git = "https://github.c../../faebryk/faebryk.git", branch = "<branch>" }
+faebryk = { path = "../../faebryk", develop = true }
 typer = { version = ">=0.9,<0.13", extras = ["all"] }
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=2.20,<4.0"
 pytest = ">=7.1.3,<9.0.0"
+isort = "^5.6.4"
+ruff = ">=0.6.4,<0.7.0"
 
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
@@ -134,7 +137,6 @@ per-file-ignores = {}
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-
-[tool.ruff.lint.mccabe]
+[tool.ruff.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
