Update gitignore to exclude atopile and AI files

--- a/.gitignore
+++ b/.gitignore
@@ -104,5 +104,13 @@ ENV/
 _local
 .local
 
-# faebryk
-build/cache/
+# atopile
+build/
+.ato
+
+# AI
+.cursor/
+.windsurf/
+.github/instructions/ato.instructions.md
+.mcp.json
+CLAUDE.md
