--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,28 @@
-repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.5.7
-    hooks:
-      - id: ruff
-      - id: ruff-format
+exclude: \.(kicad_pcb|kicad_pro|kicad_sch|kicad_mod|step|wrl)$
 
+repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
+    hooks:
+      # Checks for files that would conflict in case-insensitive filesystems
+      - id: check-case-conflict
+      # Ensures code is placed after docstrings
+      - id: check-docstring-first
+      # Verifies executable files have a proper shebang
+      - id: check-executables-have-shebangs
+      # Validates JSON files for syntax errors
+      - id: check-json
+      # Validates YAML files for syntax errors
+      - id: check-yaml
+      # Validates TOML files for syntax errors
+      - id: check-toml
+      # Detects unresolved merge conflict markers
+      - id: check-merge-conflict
+      # Checks for broken symlinks
+      - id: check-symlinks
+      # Ensures VCS permalinks are valid
+      - id: check-vcs-permalinks
+      # Ensures files end with exactly one newline
+      - id: end-of-file-fixer
+      # Removes trailing whitespace from lines
+      - id: trailing-whitespace
