--- a/ato.yaml
+++ b/ato.yaml
@@ -14,6 +14,15 @@ builds:
     #   - manifest
     #   - variable-report
     #   - bom
+  jlink_base_mini_layout:
+    entry: main.ato:JLinkBaseMiniLayout
+    hide_designators: true
+    # exclude_checks: [PCB.requires_drc_check]
+    # targets:
+    #   - mfg-data
+    #   - manifest
+    #   - variable-report
+    #   - bom
 
   rpdap:
     entry: main.ato:RPDAP
