refactor debug-connectors, fix issues in layout and connections

--- a/ato.yaml
+++ b/ato.yaml
@@ -5,7 +5,16 @@ paths:
   layout: ./layouts
 
 builds:
-  default:
+  aip74lvc1t45:
+    entry: modules/wuxi-aip74lvc1t45.ato:Wuxi_I_core_Elec_AiP74LVC1T45GB236_TR_driver
+    hide_designators: true
+    exclude_checks: [PCB.requires_drc_check]
+  rpdap:
+    entry: main.ato:RPDAP
+    hide_designators: true
+    exclude_checks: [PCB.requires_drc_check]
+
+  rpdap_stick:
     entry: main.ato:RPDAPStick
     hide_designators: true
     # exclude_checks: [PCB.requires_drc_check]
@@ -18,11 +27,11 @@ builds:
     entry: main.ato:RPDAPCompact
     hide_designators: true
     # exclude_checks: [PCB.requires_drc_check]
-    # targets:
-    #   - mfg-data
-    #   - manifest
-    #   - variable-report
-    #   - bom
+    targets:
+      - mfg-data
+      - manifest
+      - variable-report
+      - bom
   rpdap_compact_on_board:
     entry: main.ato:RPDAPCompactOnBoard
     hide_designators: true
@@ -33,19 +42,7 @@ builds:
     #   - variable-report
     #   - bom
 
-  rpdap:
-    entry: main.ato:RPDAP
-    hide_designators: true
-    exclude_checks: [PCB.requires_drc_check]
-  aip74lvc1t45:
-    entry: modules/wuxi-aip74lvc1t45.ato:Wuxi_I_core_Elec_AiP74LVC1T45GB236_TR_driver
-    hide_designators: true
-    exclude_checks: [PCB.requires_drc_check]
-
 dependencies:
-  - type: registry
-    identifier: ruben-iteng/debug-interfaces
-    release: 0.2.3
   - type: registry
     identifier: atopile/raspberry-rp2040
     release: 0.2.2
@@ -55,9 +52,6 @@ dependencies:
   - type: registry
     identifier: atopile/usb-connectors
     release: 0.3.0
-  - type: registry
-    identifier: atopile/mounting-holes
-    release: 0.1.0
   - type: registry
     identifier: atopile/st-ldk220
     release: 0.2.1
