fix workflow triggers

--- a/.github/workflows/build_hardware.yml
+++ b/.github/workflows/build_hardware.yml
@@ -4,10 +4,20 @@ on:
   push:
     tags:
       - "v*.*.*"
+  pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
+    branches:
+      - main
+    paths:
+      - "**/*.ato"
+      - "ato.yaml"
+      - "parts/**"
+      - "layouts/**"
   workflow_dispatch:
 
 jobs:
   build:
+    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.draft == false }}
     runs-on: ubuntu-latest
 
     steps:
