pin atopile workflow version to v1.x.x

--- a/.github/workflows/build_hardware.yml
+++ b/.github/workflows/build_hardware.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: atopile/setup-atopile@main
+      - uses: atopile/setup-atopile@v1
 
       - run: ato sync
       - run: ato build --frozen
